chore(git): remove coverage reports and local config from version control
- Add coverage/ and .claude/settings.local.json to .gitignore
- Remove tracked coverage files (auto-generated test reports)
- Remove Claude Code local settings file
- These files should not be in version control as they are:
  * Auto-generated (coverage reports)
  * Machine-specific (local settings)
  * Rebuilt on each test run or per-developer basis

The coverage reports can be regenerated anytime using:
npm run test:coverage

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,12 @@ out/
 .env.development.local
 .env.test.local
 .env.production.local
+
+# 测试覆盖率报告
+coverage/
+*.lcov
+.nyc_output/
+
+# Claude Code 本地配置
+.claude/settings.local.json
+.claude/.state/
