finish docker setup

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -50,3 +50,7 @@ LOG_FILE=logs/app.log
 
 # Scheduler Service
 ENABLE_SCHEDULER=false
+
+# Database Auto Migration
+# Set to true to automatically run migrations on startup (enabled by default in production)
+AUTO_MIGRATE=false
