--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -23,6 +23,13 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
 
+    # Favicon and other root static files
+    location ~* ^/(favicon\.ico|logo192\.png|logo512\.png|manifest\.json|robots\.txt)$ {
+        expires 1M;
+        add_header Cache-Control "public";
+        try_files $uri =404;
+    }
+
     # Handle React Router
     location / {
         try_files $uri $uri/ /index.html;
