--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -294,12 +294,15 @@ jobs:
               MYSQL_NETWORK=$(docker inspect hrsystem-db --format '{{range $k, $v := .NetworkSettings.Networks}}{{$k}}{{end}}' 2>/dev/null || \
                              docker inspect root-db-1 --format '{{range $k, $v := .NetworkSettings.Networks}}{{$k}}{{end}}' 2>/dev/null || echo "")
 
-              # 构建网络参数
-              NETWORK_PARAM=""
-              if [ -n "$MYSQL_NETWORK" ]; then
-                echo "MySQL 容器在网络: $MYSQL_NETWORK"
-                NETWORK_PARAM="--network $MYSQL_NETWORK"
+              # 如果没有检测到网络，使用默认的 hrsystem-network
+              if [ -z "$MYSQL_NETWORK" ]; then
+                MYSQL_NETWORK="hrsystem-network"
+                # 确保网络存在
+                docker network create $MYSQL_NETWORK 2>/dev/null || true
               fi
+
+              echo "使用网络: $MYSQL_NETWORK"
+              NETWORK_PARAM="--network $MYSQL_NETWORK"
 
               docker run -d \
                 --name hrsystem-backend \
