--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -18,6 +18,9 @@ RUN npm run build
 # Production stage
 FROM nginx:alpine
 
+# Install curl for health check
+RUN apk add --no-cache curl
+
 # Copy built app from build stage
 COPY --from=build /app/build /usr/share/nginx/html
 
@@ -29,7 +32,7 @@ EXPOSE 80
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost/ || exit 1
+  CMD curl -f http://localhost/ > /dev/null 2>&1 || exit 1
 
 # Start nginx
 CMD ["nginx", "-g", "daemon off;"]
