(feat) Implemented file upload function using AliOSS service

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -54,3 +54,11 @@ ENABLE_SCHEDULER=false
 # Database Auto Migration
 # Set to true to automatically run migrations on startup (enabled by default in production)
 AUTO_MIGRATE=false
+
+# Aliyun OSS Configuration
+OSS_REGION=cn-beijing
+ALICLOUD_ACCESS_KEY=your_access_key_id
+ALICLOUD_SECRET_KEY=your_access_key_secret
+OSS_BUCKET=hrsystem-private-oss
+# Set to true if running on ECS in the same region (uses internal endpoint)
+OSS_INTERNAL=false
